apps/iot/home-assistant/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:W+0MKgEz8Nblp7SzxS3wWeosb/qi1A==,iv:mJvnbC995n+YnbiuqjE+9sbWoN1QIfatF0GM60Ob3HE=,tag:8RPBHubA0+kvfD6kENkCbQ==,type:str]
        kubernetes.io/ingress.class: traefik-external
    name: home-assistant-proxy-staging
    namespace: home-assistant
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:YrikWjzG3HwmNgnVvFxpGSAa73QbtmK1kz0Vv8J44A8LNSs=,iv:Zds4kONkKvBQYG48HK8nddqukQI/14RsI99KqpHg3qE=,tag:RF+GUbV+hJfAupMEczmF8w==,type:str]
          middlewares:
            - name: security
              namespace: traefik
          services:
            - kind: TraefikService
              name: home-assistant-proxy
              namespace: home-assistant
    tls:
        domains:
            - main: ENC[AES256_GCM,data:rQtxabJWeLW4AlLSamsyVcti+TfLvQ==,iv:TAvnlgRa0kO7249IrVlpYEwPboeB4PA96TvNx3HW6K4=,tag:my+uEpSZ0mCAqG6fHGuKNw==,type:str]
              sans:
                - ENC[AES256_GCM,data:AcGgM7XKIsysQx7rHIeHHHxibIHnI30=,iv:+gfKXYoF/un+dhc5uR+QCOxtLnukwC/s+VAEoUaf+Fc=,tag:5BIgRhQCuzClXUXzV8JnyA==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: home-assistant-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0S1BqT0tKTm82YVJ0THU1
[...]
            91rRd0AAP6RJxZUmF0Oax4oZHOvaeMCNTPijdHto/yAvV5subkO2lg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-08-26T17:39:26Z"
    mac: ENC[AES256_GCM,data:9u+mHq4VNq8PWOGcCmxpSlnmmSeA5lgqDSzj+2PHTtr09iPhZWIh8fsHBytzbBiq0349+IlWbUXZeptSOZ7ZY4qTj1Up+dt3qnxJ+qzZM9axkdhy8tzO0Ihc0GayqPbAAskWPYPw3y+V8x5c3a2v2q3nQoYRi+4BRIYEp1u8hFk=,iv:37VAyo/WS6lgAW6oL1WNDCDLIEvWKDVDlyuVBriAsDM=,tag:ekxs7JNcTAYr+gAweJK+JA==,type:str]
    pgp:
        - created_at: "2024-06-22T20:23:56Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAwgx1mZcn7xu81b4rejL5XdzTAPJT4crvB9/91uzVYAC5
[...]
            =C1pg
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
